--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     I'm curious about how to make the simulated world & real world <b>even closer than before</b>. ;-)
                 </div>
                 <a class="badge bg-success text-white"
-                    href="http://www.cad.zju.edu.cn/home/weiweixu/wwxu2019.files/xudong.pdf">
+                    href="mailto:xudongfeng18@gmail.com">
                     Mail
                 </a> xudongfeng18@gmail.com
             </div>
@@ -137,6 +137,16 @@
                         GAMES 201: Advanced Physics Engines (2020)
                     </div>
                     Teaching Assitant
+                </div>
+            </div>
+            <div class="row align-items-center mb-2">
+                <div class="col-lg-2 my-2">
+                    <img src="imgs/talks icon.png" width="100" , class="img-thumbnail" />
+                </div>
+                <div class="col-lg-10 my-2">
+                    <div class="font-weight-bolder lead">
+                        <a href="https://www.bilibili.com/video/BV1um4y1z7AA"> My talk </a> about the measurement of bending quantaties for fabrics. (Chinese)
+                    </div>
                 </div>
             </div>
 
