--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                     href="mailto:xudongfeng18@gmail.com">
                     Mail
                 </a> xudongfeng18@gmail.com
+                <br>
+                <a class="badge bg-success text-white"
+                    href="https://github.com/Rullec">
+                    Github
+                </a>  <a href="https://github.com/Rullec" > Rullec </a> 
             </div>
         </div>
     </div>
