--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
                     Teaching Assitant
                 </div>
             </div>
+
             <div class="row align-items-center mb-2">
                 <div class="col-lg-2 my-2">
-                    <img src="imgs/talks icon.png" width="100" , class="img-thumbnail" />
+                    <img src="imgs/talks_icon.png" width="100" , class="img-thumbnail" />
                 </div>
                 <div class="col-lg-10 my-2">
                     <div class="font-weight-bolder lead">
