--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         </div>
     </section>
 
-    <section id="Teaching & Open Source">
+    <section id="misc">
         <div class="container pt-3 my-3 border rounded">
-            <h2>Teaching & Open Source</h2>
+            <h2>Teaching, Talks and Open Source</h2>
             <div class="row align-items-center mb-2">
                 <div class="col-lg-2 my-2">
                     <img src="imgs/numer_round.jpg" width="100" , class="img-thumbnail" />
