--- a/index.html
+++ b/index.html
@@ -56,6 +56,36 @@
 
             <div class="row align-items-center mb-2">
                 <div class="col-lg-2 my-2 text-center">
+                    <a><img src="yarn/paper_stable_yarn_img.jpg" class="img-thumbnail" /></a>
+                </div>
+                <div class="col-lg-10 container my-2">
+                    <div class="font-weight-bolder lead">
+                        Neural-Assisted Homogenization of Yarn-Level Cloth
+                    </div>
+                    <div class="">
+                        <b>Xudong Feng</b>, Huamin Wang, Yang Yin, Weiwei Xu
+                    </div>
+                    <div class="text-muted small">
+                        SIGGRAPH 2024 Conference Track
+                    </div>
+                    <a class="badge bg-success text-white"
+                        href="yarn/paper_low_res.pdf">
+                        Paper
+                    </a>
+                    <!-- <a class="badge bg-success text-white" href="https://www.bilibili.com/video/BV1eV4y1M7Yr">
+                        Video
+                    </a>
+                    <a class="badge bg-success text-white" href="https://github.com/DrapeTester/ClothDrapeTester">
+                        Code
+                    </a> -->
+                    <div class="mt-1">
+                        Improve simulation efficiency significantly by <b>improving the quality of Newton step</b>.
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center mb-2">
+                <div class="col-lg-2 my-2 text-center">
                     <a><img src="imgs/cloth_bending.jpg" class="img-thumbnail" /></a>
                 </div>
                 <div class="col-lg-10 container my-2">
