--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
           justify-content: center;
         ">
             <div>
-                <img class="rounded" src="imgs/xudong_profile.jpeg" width="150" />
+                <img class="rounded" src="imgs/portrait.jpeg" width="150" />
             </div>
             <div class="mx-4 my-2" style="flex-grow: 1; flex-basis: 200px">
                 <h1>Xudong Feng</h1>
                 <div class="my-2">
                     I am a PhD candidate in the <a href="http://www.cad.zju.edu.cn/">CAD&CG State Key Lab</a> at
-                    Zhejiang University, and my supervisor is <a
+                    Zhejiang University under the supervision of <a
                         href="http://www.cad.zju.edu.cn/home/weiweixu/weiweixu_en.htm">
-                        Weiwei Xu</a>.
+                        Prof. Weiwei Xu</a>.
                     <br>
-                    I'm curious about how to make the simulated world & real world <b>even closer than before</b>. ;-)
+                    My research interests include physics-based simulation & animation, and its combination with learning in computer graphics.
                 </div>
                 <a class="badge bg-success text-white"
                     href="mailto:xudongfeng18@gmail.com">
