--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         Neural-Assisted Homogenization of Yarn-Level Cloth
                     </div>
                     <div class="">
-                        <b>Xudong Feng</b>, Huamin Wang, Yang Yin, Weiwei Xu
+                        <b>Xudong Feng</b>, Huamin Wang, Yin Yang, Weiwei Xu
                     </div>
                     <div class="text-muted small">
                         SIGGRAPH 2024 Conference Track
