--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         Computational Design of Skinned Quad-Robots
                     </div>
                     <div class="">
-                        <b>Xudon Feng</b>, Jiafeng Liu, Huamin Wang, Yin Yang, Hujun
+                        <b>Xudong Feng</b>, Jiafeng Liu, Huamin Wang, Yin Yang, Hujun
                         Bao, Bernd Bickel, and Weiwei Xu
                     </div>
                     <div class="text-muted small">
