--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
                         href="yarn/paper_low_res.pdf">
                         Paper
                     </a>
+                    <a class="badge bg-success text-white"
+                        href="yarn/supp_low_res.pdf">
+                        Supp
+                    </a>
+                    <a class="badge bg-success text-white"
+                        href="https://youtu.be/t3OKvOiWX6w">
+                        Video
+                    </a>
                     <!-- <a class="badge bg-success text-white" href="https://www.bilibili.com/video/BV1eV4y1M7Yr">
                         Video
                     </a>
