--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
             <div class="mx-4 my-2" style="flex-grow: 1; flex-basis: 200px">
                 <h1>Xudong Feng</h1>
                 <div class="my-2">
-                    I am a PhD candidate in the <a href="http://www.cad.zju.edu.cn/">CAD&CG State Key Lab</a> at
-                    Zhejiang University under the supervision of <a
-                        href="http://www.cad.zju.edu.cn/home/weiweixu/weiweixu_en.htm">
-                        Prof. Weiwei Xu</a>.
-                    <br>
-                    My research interests include physics-based simulation & animation, and its combination with learning in computer graphics.
+                    I got my PhD degree at <a href="http://www.cad.zju.edu.cn/">CAD&CG State Key Lab</a> of 
+                    Zhejiang University in 2024.
+                    My research interests include physics-based simulation & animation, and its combination with deep learning in computer graphics.
                 </div>
                 <a class="badge bg-success text-white"
                     href="mailto:xudongfeng18@gmail.com">
