--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Xudong Feng</title>
+    <title>Xudong Feng </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik|Roboto+Slab" />
@@ -28,9 +28,9 @@
                 <img class="rounded" src="imgs/portrait.jpeg" width="150" />
             </div>
             <div class="mx-4 my-2" style="flex-grow: 1; flex-basis: 200px">
-                <h1>Xudong Feng</h1>
+                <h1>Xudong Feng (冯旭东)</h1>
                 <div class="my-2">
-                    I got my PhD degree at <a href="http://www.cad.zju.edu.cn/">CAD&CG State Key Lab</a> of 
+                    I work at Mihoyo (米哈游) after getting my PhD degree at <a href="http://www.cad.zju.edu.cn/">CAD&CG State Key Lab</a> of 
                     Zhejiang University in 2024.
                     My research interests include physics-based simulation & animation, and its combination with deep learning in computer graphics.
                 </div>
