--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         Supp
                     </a>
                     <a class="badge bg-success text-white"
-                        href="https://youtu.be/t3OKvOiWX6w">
+                        href="https://youtu.be/8USh72dfRQk">
                         Video
                     </a>
                     <!-- <a class="badge bg-success text-white" href="https://www.bilibili.com/video/BV1eV4y1M7Yr">
