--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                         href="https://youtu.be/8USh72dfRQk">
                         Video
                     </a>
+                    <a class="badge bg-success text-white"
+                        href="https://github.com/Rullec/neural_homo_yarn_cloth">
+                        Code
+                    </a>
                     <!-- <a class="badge bg-success text-white" href="https://www.bilibili.com/video/BV1eV4y1M7Yr">
                         Video
                     </a>
