--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="mx-4 my-2" style="flex-grow: 1; flex-basis: 200px">
                 <h1>Xudong Feng (冯旭东)</h1>
                 <div class="my-2">
-                    I work at miHoyo (米哈游) after getting my PhD degree at <a href="http://www.cad.zju.edu.cn/">CAD&CG State Key Lab</a> of 
+                    I work at miHoYo (米哈游) after getting my PhD degree at <a href="http://www.cad.zju.edu.cn/">CAD&CG State Key Lab</a> of 
                     Zhejiang University in 2024.
                     My research interests include physics-based simulation & animation, and its combination with deep learning in computer graphics.
                 </div>
