--- a/index.html
+++ b/index.html
@@ -182,11 +182,21 @@
 
             <div class="row align-items-center mb-2">
                 <div class="col-lg-2 my-2">
-                    <img src="imgs/talks_icon.png" width="100" , class="img-thumbnail" />
+                    <img src="imgs/talk0.jpg" width="100" , class="img-thumbnail" />
                 </div>
                 <div class="col-lg-10 my-2">
                     <div class="font-weight-bolder lead">
-                        <a href="https://www.bilibili.com/video/BV1um4y1z7AA"> My talk </a> about the measurement of bending quantaties for fabrics. (Chinese)
+                        <a href="https://www.bilibili.com/video/BV1um4y1z7AA"> My talk </a> about the measurement of bending quantaties for fabrics. (In Chinese)
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center mb-2">
+                <div class="col-lg-2 my-2">
+                    <img src="imgs/talk1.jpg" width="100" , class="img-thumbnail" />
+                </div>
+                <div class="col-lg-10 my-2">
+                    <div class="font-weight-bolder lead">
+                        <a href="https://www.bilibili.com/video/BV16VCpYyEyY"> My talk </a> about the accelerated method for homogenized yarn-level cloth. (In Chinese)
                     </div>
                 </div>
             </div>
